force-app/main/default/objects/Case/fields/COMM_Active__c.field-meta.xml
<CustomField>
    <fullName>COMM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>