force-app/main/default/objects/Case/fields/COMM_AffiliateCategory__c.field-meta.xml
<CustomField>
    <fullName>COMM_AffiliateCategory__c</fullName>
    <description>Field with Category of Affiliate Account related on a Case Affiliate registration request.</description>
    <label>Affiliate Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_AccountCategory</valueSetName>
    </valueSet>
</CustomField>