force-app/main/default/objects/Case/fields/COMM_AffiliateNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_AffiliateNumber__c</fullName>
    <label>Affiliate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>