force-app/main/default/objects/Case/fields/COMM_AffiliatePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>COMM_AffiliatePaymentMethod__c</fullName>
    <description>Field with Payment Methods of Affiliate Account related on a Case Affiliate registration request.</description>
    <label>Affiliate Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_PaymentType</valueSetName>
    </valueSet>
</CustomField>