force-app/main/default/objects/Case/fields/COMM_Card__c.field-meta.xml
<CustomField>
    <fullName>COMM_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>