force-app/main/default/objects/Case/fields/COMM_CardPrice__c.field-meta.xml
<CustomField>
    <fullName>COMM_CardPrice__c</fullName>
    <description>Field with the Price of a Card related on Subscription on Case.</description>
    <label>Card Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>