force-app/main/default/objects/Case/fields/COMM_CheckPartnerVisibility__c.field-meta.xml
<CustomField>
    <fullName>COMM_CheckPartnerVisibility__c</fullName>
    <formula>OR(IF(
ISBLANK($User.COMM_EffectiveAccountId__c),
$User.COMM_AccountId__c = Account.Id &amp;&amp; CONTAINS($User.COMM_ContactAirports__c, TEXT(Product.COMM_Airport__c)),
CONTAINS($User.COMM_EffectiveAccountId__c,Account.Id) &amp;&amp; CONTAINS($User.COMM_ContactAirports__c, TEXT(Product.COMM_Airport__c))),
OR($UserRole.DeveloperName =&apos;COMM_ANA_Admin&apos;,$UserRole.DeveloperName =&apos;COMM_Platform_Administrator&apos;,$UserRole.DeveloperName =&apos;COMM_SABA&apos;))</formula>
    <label>Check Partner Visibility</label>
    <type>Checkbox</type>
</CustomField>