force-app/main/default/objects/Case/fields/COMM_Comments__c.field-meta.xml
<CustomField>
    <fullName>COMM_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>