force-app/main/default/objects/Case/fields/COMM_CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>COMM_CompanyAddress__c</fullName>
    <description>Address related to a Company.</description>
    <label>Company Address</label>
    <type>Address</type>
</CustomField>