force-app/main/default/objects/Case/fields/COMM_CompanyEmail__c.field-meta.xml
<CustomField>
    <fullName>COMM_CompanyEmail__c</fullName>
    <description>Email address related to a Company.</description>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>