force-app/main/default/objects/Case/fields/COMM_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>COMM_CompanyName__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>