force-app/main/default/objects/Case/fields/COMM_CompanyVATNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_CompanyVATNumber__c</fullName>
    <label>Company VAT Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>