force-app/main/default/objects/Case/fields/COMM_ConsentUseofDataforMarketing__c.field-meta.xml
<CustomField>
    <fullName>COMM_ConsentUseofDataforMarketing__c</fullName>
    <label>Consent Use of Data for Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Confirmation</valueSetName>
    </valueSet>
</CustomField>