force-app/main/default/objects/Case/fields/COMM_CustomerExternalId__c.field-meta.xml
<CustomField>
    <fullName>COMM_CustomerExternalId__c</fullName>
    <description>Field with identifier of a Customer.</description>
    <externalId>true</externalId>
    <label>Customer External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>