force-app/main/default/objects/Case/fields/COMM_DateAdminApprovalWarning__c.field-meta.xml
<CustomField>
    <fullName>COMM_DateAdminApprovalWarning__c</fullName>
    <label>Date Admin Approval Warning</label>
    <type>Date</type>
</CustomField>