force-app/main/default/objects/Case/fields/COMM_DateArchiveWarning__c.field-meta.xml
<CustomField>
    <fullName>COMM_DateArchiveWarning__c</fullName>
    <label>Date Archive Warning</label>
    <type>Date</type>
</CustomField>