force-app/main/default/objects/Case/fields/COMM_DateToArchive__c.field-meta.xml
<CustomField>
    <fullName>COMM_DateToArchive__c</fullName>
    <label>Date to Archive</label>
    <type>Date</type>
</CustomField>