force-app/main/default/objects/Case/fields/COMM_DateToExpire__c.field-meta.xml
<CustomField>
    <fullName>COMM_DateToExpire__c</fullName>
    <label>Date To Expire</label>
    <type>Date</type>
</CustomField>