force-app/main/default/objects/Case/fields/COMM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>