force-app/main/default/objects/Case/fields/COMM_ExistingAffiliateAccount__c.field-meta.xml
<CustomField>
    <fullName>COMM_ExistingAffiliateAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field that relates an Account on Case Affiliate registration requests if already exists in Salesforce.</description>
    <label>Existing Affiliate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>