force-app/main/default/objects/Case/fields/COMM_FirstName__c.field-meta.xml
<CustomField>
    <fullName>COMM_FirstName__c</fullName>
    <label>Case First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>