force-app/main/default/objects/Case/fields/COMM_FormSubmitted__c.field-meta.xml
<CustomField>
    <fullName>COMM_FormSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Submitted</label>
    <type>Checkbox</type>
</CustomField>