force-app/main/default/objects/Case/fields/COMM_IsPartnertheCreator__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsPartnertheCreator__c</fullName>
    <description>Verify that the user is the creator of the case</description>
    <formula>$User.Id = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Partner the Creator</label>
    <type>Checkbox</type>
</CustomField>