force-app/main/default/objects/Case/fields/COMM_IsRejected__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRejected</label>
    <type>Checkbox</type>
</CustomField>