force-app/main/default/objects/Case/fields/COMM_JobRole__c.field-meta.xml
<CustomField>
    <fullName>COMM_JobRole__c</fullName>
    <label>Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>