force-app/main/default/objects/Case/fields/COMM_Language__c.field-meta.xml
<CustomField>
    <fullName>COMM_Language__c</fullName>
    <description>Field used to define the language used when communicating with the client</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pt_PT</fullName>
                <label>Portuguese (European)</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>en</fullName>
                <isActive>false</isActive>
                <label>en</label>
            </value>
            <value>
                <fullName>en_EN</fullName>
                <isActive>false</isActive>
                <label>en_EN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>