force-app/main/default/objects/Case/fields/COMM_LastName__c.field-meta.xml
<CustomField>
    <fullName>COMM_LastName__c</fullName>
    <label>Case Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>