force-app/main/default/objects/Case/fields/COMM_LicensePlateReadingConsent__c.field-meta.xml
<CustomField>
    <fullName>COMM_LicensePlateReadingConsent__c</fullName>
    <label>License Plate Reading Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Confirmation</valueSetName>
    </valueSet>
</CustomField>