force-app/main/default/objects/Case/fields/COMM_Motive__c.field-meta.xml
<CustomField>
    <fullName>COMM_Motive__c</fullName>
    <description>Reason of the requisition of a new card</description>
    <label>Motive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>