force-app/main/default/objects/Case/fields/COMM_NewCardRequest__c.field-meta.xml
<CustomField>
    <fullName>COMM_NewCardRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Card Request?</label>
    <type>Checkbox</type>
</CustomField>