force-app/main/default/objects/Case/fields/COMM_Order__c.field-meta.xml
<CustomField>
    <fullName>COMM_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Order record related on Case.</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>