force-app/main/default/objects/Case/fields/COMM_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Order Product record related on Case.</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>