force-app/main/default/objects/Case/fields/COMM_OrderSummary__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Order Summary record related on Case.</description>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>