force-app/main/default/objects/Case/fields/COMM_Park__c.field-meta.xml
<CustomField>
    <fullName>COMM_Park__c</fullName>
    <formula>TEXT(Product.COMM_Park__c)</formula>
    <label>Park</label>
    <type>Text</type>
</CustomField>