force-app/main/default/objects/Case/fields/COMM_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>COMM_PaymentMethod__c</fullName>
    <description>Formula field with Payment Method selected for a related Subscription acquisition.</description>
    <formula>TEXT(COMM_Subscription__r.COMM_PaymentMethod__c)</formula>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>