force-app/main/default/objects/Case/fields/COMM_Periodicity__c.field-meta.xml
<CustomField>
    <fullName>COMM_Periodicity__c</fullName>
    <label>Periodicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Periodicity</valueSetName>
    </valueSet>
</CustomField>