force-app/main/default/objects/Case/fields/COMM_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>