force-app/main/default/objects/Case/fields/COMM_PrivacyPolicyConsent__c.field-meta.xml
<CustomField>
    <fullName>COMM_PrivacyPolicyConsent__c</fullName>
    <label>Privacy Policy Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Confirmation</valueSetName>
    </valueSet>
</CustomField>