force-app/main/default/objects/Case/fields/COMM_ReasonOfRejection__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReasonOfRejection__c</fullName>
    <label>Reason of Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>