force-app/main/default/objects/Case/fields/COMM_ReportRecordType__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReportRecordType__c</fullName>
    <description>Field used by reports</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Record Type</label>
    <type>Text</type>
</CustomField>