force-app/main/default/objects/Case/fields/COMM_SABARejection__c.field-meta.xml
<CustomField>
    <fullName>COMM_SABARejection__c</fullName>
    <label>SABA Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>