force-app/main/default/objects/Case/fields/COMM_SecondaryVehicleBrand__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondaryVehicleBrand__c</fullName>
    <label>Secondary Vehicle Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>