force-app/main/default/objects/Case/fields/COMM_SecondaryVehicleModel__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondaryVehicleModel__c</fullName>
    <label>Secondary Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>