force-app/main/default/objects/Case/fields/COMM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>