force-app/main/default/objects/Case/fields/COMM_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubCategory__c</fullName>
    <formula>COMM_Subscription__r.COMM_SubCategory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Category</label>
    <type>Text</type>
</CustomField>