force-app/main/default/objects/Case/fields/COMM_SubscriptionAirport__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptionAirport__c</fullName>
    <formula>CASE(Product.COMM_Airport__c, 
						&quot;OPO&quot;, &quot;Porto&quot;,
						&quot;LIS&quot;,&quot;Lisbon&quot;,
				   &quot;FAO&quot;,&quot;Faro&quot;,
				   &quot;FNC&quot;,&quot;Madeira&quot;,
				    &quot;PDL&quot;,&quot;Ponta Delgada&quot;,
					    &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airport Name</label>
    <type>Text</type>
</CustomField>