force-app/main/default/objects/Case/fields/COMM_SubscriptionPrice__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptionPrice__c</fullName>
    <description>Field with the Price of a Subscription related on Case.</description>
    <label>Subscription Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>