force-app/main/default/objects/Case/fields/COMM_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>COMM_TotalPrice__c</fullName>
    <formula>COMM_SubscriptionPrice__c + COMM_CardPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>