force-app/main/default/objects/Case/fields/COMM_VATNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_VATNumber__c</fullName>
    <description>This is the unique number that identifies a taxable person (business) or non-taxable legal entity that is registered for VAT.</description>
    <label>VAT Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>