force-app/main/default/objects/Case/fields/COMM_VehicleBrand__c.field-meta.xml
<CustomField>
    <fullName>COMM_VehicleBrand__c</fullName>
    <label>Vehicle Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>