force-app/main/default/objects/Case/fields/COMM_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_ZipCode__c</fullName>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>