force-app/main/default/objects/Case/fields/Renewal_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notification_Date__c</fullName>
    <formula>COMM_EndDate__c - $CustomMetadata.COMM_SubscriptionConfiguration__mdt.Subscription_Configuration.COMM_DaysBeforeRenewalNotification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Notification Date</label>
    <type>Date</type>
</CustomField>