force-app/main/default/objects/Case/recordTypes/COMM_AffiliateRequest.recordType-meta.xml
<RecordType>
    <fullName>COMM_AffiliateRequest</fullName>
    <active>true</active>
    <businessProcess>Affiliate Request</businessProcess>
    <description>Case to request a creation of a Affiliate</description>
    <label>Affiliate Request</label>
</RecordType>