force-app/main/default/objects/Case/recordTypes/COMM_CancelationRequest.recordType-meta.xml
<RecordType>
    <fullName>COMM_CancelationRequest</fullName>
    <active>true</active>
    <businessProcess>Cancelation Request</businessProcess>
    <description>Case for a request to cancel a subscription</description>
    <label>Cancelation Request</label>
</RecordType>