force-app/main/default/objects/Case/recordTypes/COMM_CancelPublicSubscription.recordType-meta.xml
<RecordType>
    <fullName>COMM_CancelPublicSubscription</fullName>
    <active>true</active>
    <businessProcess>Cancel Public Subscription</businessProcess>
    <description>Record Type for Cancel Public Subscriptions</description>
    <label>Cancel Public Subscription</label>
</RecordType>