force-app/main/default/objects/Case/recordTypes/COMM_ChangeOwnership.recordType-meta.xml
<RecordType>
    <fullName>COMM_ChangeOwnership</fullName>
    <active>true</active>
    <businessProcess>Change Ownership</businessProcess>
    <description>Case for a request to change the ownership of a subscription</description>
    <label>Change Ownership</label>
</RecordType>