force-app/main/default/objects/Case/recordTypes/COMM_ChangePaymentPeriodicity.recordType-meta.xml
<RecordType>
    <fullName>COMM_ChangePaymentPeriodicity</fullName>
    <active>true</active>
    <businessProcess>Change Payment Periodicity</businessProcess>
    <description>Case for a request to change the payment periodicity of a subscription</description>
    <label>Change Payment Periodicity</label>
</RecordType>