force-app/main/default/objects/Case/recordTypes/COMM_ChangeSubscriptionInformation.recordType-meta.xml
<RecordType>
    <fullName>COMM_ChangeSubscriptionInformation</fullName>
    <active>true</active>
    <businessProcess>Change Subscription Information</businessProcess>
    <description>Case for a request to change the user information of a subscription</description>
    <label>Change Subscription Information</label>
</RecordType>