force-app/main/default/objects/Case/recordTypes/COMM_ChangeUserInformation.recordType-meta.xml
<RecordType>
    <fullName>COMM_ChangeUserInformation</fullName>
    <active>true</active>
    <businessProcess>Change User Information</businessProcess>
    <description>Case to request user information</description>
    <label>Change User Information</label>
</RecordType>