force-app/main/default/objects/Case/recordTypes/COMM_ContactUs.recordType-meta.xml
<RecordType>
    <fullName>COMM_ContactUs</fullName>
    <active>true</active>
    <businessProcess>Contact Us</businessProcess>
    <description>Case to submit a a request for information</description>
    <label>Contact Us</label>
</RecordType>