force-app/main/default/objects/Case/recordTypes/COMM_IndividualStaffRequest.recordType-meta.xml
<RecordType>
    <fullName>COMM_IndividualStaffRequest</fullName>
    <active>true</active>
    <businessProcess>Individual Staff Request</businessProcess>
    <description>Case to request individual staff attribute</description>
    <label>Individual Staff Request</label>
</RecordType>