force-app/main/default/objects/Case/recordTypes/COMM_ManualRenewal.recordType-meta.xml
<RecordType>
    <fullName>COMM_ManualRenewal</fullName>
    <active>true</active>
    <businessProcess>Manual renewal</businessProcess>
    <description>Manual Renewal Record Type</description>
    <label>Manual Renewal</label>
</RecordType>