force-app/main/default/objects/Case/recordTypes/COMM_NewCardDueToDamageLoss.recordType-meta.xml
<RecordType>
    <fullName>COMM_NewCardDueToDamageLoss</fullName>
    <active>true</active>
    <businessProcess>New Card due To Damage%2FLoss</businessProcess>
    <description>Case to request a new card for a subscription</description>
    <label>New Card due To Damage/Loss</label>
</RecordType>