force-app/main/default/objects/Case/recordTypes/COMM_NewPublicSubscription.recordType-meta.xml
<RecordType>
    <fullName>COMM_NewPublicSubscription</fullName>
    <active>true</active>
    <businessProcess>New Public Subscription</businessProcess>
    <description>Record Type for New Public Subscriptions.</description>
    <label>New Public Subscription</label>
</RecordType>