force-app/main/default/objects/Case/recordTypes/COMM_NewSubscription.recordType-meta.xml
<RecordType>
    <fullName>COMM_NewSubscription</fullName>
    <active>true</active>
    <businessProcess>New Subscription</businessProcess>
    <description>Case to renew a subscription manually</description>
    <label>New Subscription</label>
</RecordType>