force-app/main/default/objects/Case/recordTypes/COMM_PartnerRequest.recordType-meta.xml
<RecordType>
    <fullName>COMM_PartnerRequest</fullName>
    <active>true</active>
    <businessProcess>Partner Request</businessProcess>
    <description>Case to request a creation of a partner</description>
    <label>Partner Request</label>
</RecordType>