force-app/main/default/objects/Case/recordTypes/COMM_RecurringPublicSubscription.recordType-meta.xml
<RecordType>
    <fullName>COMM_RecurringPublicSubscription</fullName>
    <active>true</active>
    <businessProcess>Recurring Public Subscription</businessProcess>
    <description>Record Type for Recurring Public Subscriptions.</description>
    <label>Recurring Public Subscription</label>
</RecordType>