force-app/main/default/objects/Case/validationRules/COMM_RejectingPartnerRequiresReason.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_RejectingPartnerRequiresReason</fullName>
    <active>true</active>
    <description>Provide a reason for rejecting the Case.</description>
    <errorConditionFormula>AND(
				RecordType.DeveloperName = &apos;COMM_PartnerRequest&apos;,
    ISPICKVAL(Status, &quot;Request Denied&quot;),
    ISBLANK(COMM_ReasonOfRejection__c)
)</errorConditionFormula>
    <errorDisplayField>COMM_ReasonOfRejection__c</errorDisplayField>
    <errorMessage>Please provide a reason for rejecting the Case</errorMessage>
</ValidationRule>