force-app/main/default/objects/Case/validationRules/COMM_SubscriptionNumberRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_SubscriptionNumberRequired</fullName>
    <active>true</active>
    <description>Subscription Number is Required</description>
    <errorConditionFormula>AND(    
				ISBLANK(COMM_SubscriptionNumber__c),
				ISPICKVAL(Status, &quot;Process Concluded&quot;),
				RecordType.DeveloperName = &apos;COMM_NewSubscription&apos;
				)</errorConditionFormula>
    <errorDisplayField>COMM_SubscriptionNumber__c</errorDisplayField>
    <errorMessage>Subscription Number is Required</errorMessage>
</ValidationRule>