force-app/main/default/objects/Case/validationRules/COMM_VerifyOwnerIsQueue.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyOwnerIsQueue</fullName>
    <active>true</active>
    <description>Verify if owner is a queue and prevents editing if its true.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
NOT(ISCHANGED(OwnerId)),
LEFT(OwnerId, 3) = &apos;00G&apos;,
OR(
RecordType.DeveloperName = &apos;COMM_AffiliateRequest&apos;,
RecordType.DeveloperName = &apos;COMM_PartnerRequest&apos;
)
)</errorConditionFormula>
    <errorMessage>Record cannot be edited as long as it belongs to a queue
Please assign to your self</errorMessage>
</ValidationRule>