force-app/main/default/objects/Case/validationRules/COMM_VerifyPhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyPhoneNumber</fullName>
    <active>true</active>
    <description>Check if Phone Number start with a Country Prefix followed by a space charter.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(COMM_PhoneNumber__c)),
NOT(REGEX(COMM_PhoneNumber__c, &quot;[+][0-9]{3} [0-9]+&quot;)),
NOT(REGEX(COMM_PhoneNumber__c, &quot;[+][0-9]{2} [0-9]+&quot;))
)</errorConditionFormula>
    <errorDisplayField>COMM_PhoneNumber__c</errorDisplayField>
    <errorMessage>Phone Number should be preceded by a valid Country Code prefix followed by a space.</errorMessage>
</ValidationRule>