force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>COMM_SubscriptionAirport__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>COMM_PaymentMethod__c</columns>
    <columns>COMM_Subscription__c</columns>
    <columns>COMM_SubscriptionNumber__c</columns>
    <columns>PRODUCT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>COMM_LastName__c</columns>
    <columns>COMM_FirstName__c</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Request Denied,Archived,Expired</value>
    </filters>
    <label>All Open Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>