force-app/main/default/objects/Case/listViews/COMM_AffiliateRequestsCaseQueue_Case.listView-meta.xml
<ListView>
    <fullName>COMM_AffiliateRequestsCaseQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Affiliate Requests Case Queue</label>
    <queue>COMM_AffiliateRequestsCaseQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>