force-app/main/default/objects/Case/listViews/COMM_IndividualStaffRequestsCaseQueue_Case.listView-meta.xml
<ListView>
    <fullName>COMM_IndividualStaffRequestsCaseQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Individual Staff Requests Case Queue</label>
    <queue>COMM_IndividualStaffRequestsCaseQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>