force-app/main/default/objects/Case/listViews/COMM_LV_Case_AllOpenCasesPartner.listView-meta.xml
<ListView>
    <fullName>COMM_LV_Case_AllOpenCasesPartner</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>COMM_Airport__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>COMM_Subscription__c</columns>
    <columns>PRODUCT.NAME</columns>
    <columns>NAME</columns>
    <columns>COMM_FirstName__c</columns>
    <columns>COMM_LastName__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Request Denied,Archived,Expired</value>
    </filters>
    <filters>
        <field>COMM_CheckPartnerVisibility__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Open Cases - Partner</label>
    <sharedTo>
        <group>COMM_PublicGroupPartnerAdmin</group>
    </sharedTo>
</ListView>